--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,9 +1,9 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-	    "type": "chafa",
+	    "type": "auto",
 	    "height": 15 ,
-	    "source": "~/Projects/dotfiles/fastfetch/celeste.png",
+	    "source": "%USERPROFILE%/Projects/dotfiles/fastfetch/sixel.txt",
         "padding": {
             "top": 1,
             "left": 0,
