--- a/oh-my-posh/config.toml
+++ b/oh-my-posh/config.toml
@@ -1,6 +1,18 @@
-"$schema" = "https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json"
-version = 2
+version = 3
 final_space = true
+
+[palette]
+  text = '#282a36'
+
+[secondary_prompt]
+  template = ' ⮡➝'
+  background = 'transparent'
+  foreground_templates = ['{{ if gt .Code 0 }}red{{end}}', '{{ if gt 0 .Code }}green{{end}}', '{{ if eq .Code 0 }}blue{{end}}']
+
+[transient_prompt]
+  template = ' ➝ '
+  background = 'transparent'
+  foreground_templates = ['{{ if gt .Code 0 }}red{{end}}', '{{ if gt 0 .Code }}green{{end}}', '{{ if eq .Code 0 }}darkGray{{end}}']
 
 [[blocks]]
   type = 'prompt'
@@ -8,105 +20,79 @@ final_space = true
   newline = true
 
   [[blocks.segments]]
-    type = 'session'
-    style = 'diamond'
     leading_diamond = ''
+    template = '{{ .UserName }}'
     foreground = 'p:text'
     background = 'cyan'
-    template = '{{ .UserName }}'
+    type = 'session'
+    style = 'diamond'
 
   [[blocks.segments]]
+    template = ' {{ .Path }}'
+    foreground = 'p:text'
+    powerline_symbol = ''
+    background = 'blue'
     type = 'path'
     style = 'powerline'
-    powerline_symbol = ''
-    foreground = 'p:text'
-    background = 'blue'
-    template = ' {{ .Path }}'
 
     [blocks.segments.properties]
-        mixed_threshold = 8
-        
-        folder_separator_icon = '/'
-        folder_icon = ''
-        home_icon = '~'
+      folder_icon = ''
+      folder_separator_icon = '/'
+      home_icon = '~'
+      mixed_threshold = 8
+      style = 'mixed'
 
-        style = 'mixed'
+  [[blocks.segments]]
+    template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end }}{{ if gt .Behind 0 }}⇣{{.Behind}}{{ end }}{{ if gt .Ahead 0 }}⇡{{.Ahead}}{{ end }}'
+    foreground = 'p:text'
+    powerline_symbol = ''
+    background = 'cyan'
+    type = 'git'
+    style = 'powerline'
 
-    [[blocks.segments]]
-        type = 'git'
-        style = 'powerline'
-        powerline_symbol = ''
-        foreground = 'p:text'
-        background = 'cyan'
-        template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end }}{{ if gt .Behind 0 }}⇣{{.Behind}}{{ end }}{{ if gt .Ahead 0 }}⇡{{.Ahead}}{{ end }}'
-        
-        [blocks.segments.properties]
-            branch_icon = ' '
-            cherry_pick_icon = ' '
-            commit_icon = ' '
-            fetch_status = true
-            fetch_upstream_icon = false
-            merge_icon = ' '
-            no_commits_icon = ' '
-            rebase_icon = ' '
-            revert_icon = ' '
-            tag_icon = ' '
+    [blocks.segments.properties]
+      branch_icon = ' '
+      cherry_pick_icon = ' '
+      commit_icon = ' '
+      fetch_status = true
+      fetch_upstream_icon = false
+      merge_icon = ' '
+      no_commits_icon = ' '
+      rebase_icon = ' '
+      revert_icon = ' '
+      tag_icon = ' '
 
 [[blocks]]
-    type = 'prompt'
-    alignment = 'right'
+  type = 'prompt'
+  alignment = 'right'
 
-    [[blocks.segments]]
+  [[blocks.segments]]
+    template = '  took {{ .FormattedMs }} '
+    foreground = 'cyan'
+    background = 'transparent'
     type = 'executiontime'
     style = 'plain'
-    background = 'transparent'
-    foreground = 'cyan'
-    template = "  took {{ .FormattedMs }} "
 
-        [blocks.segments.properties]
-        style = 'round'
-        threshhold = 2000
+    [blocks.segments.properties]
+      style = 'round'
+      threshhold = 2000
 
 [[blocks]]
-    type = 'prompt'
-    alignment = 'left'
-    newline = true
+  type = 'prompt'
+  alignment = 'left'
+  newline = true
 
-    [[blocks.segments]]
-        type = 'text'
-        style = 'plain'
-        background = 'transparent'
-        template = ' ⮡ '
-        foreground_templates = [
-            '{{ if gt .Code 0 }}red{{end}}',
-            '{{ if gt 0 .Code }}green{{end}}',
-            '{{ if eq .Code 0 }}blue{{end}}'
-        ]
-
-[secondary_prompt]
-    template = ' ⮡➝'
+  [[blocks.segments]]
+    template = ' ⮡ '
     background = 'transparent'
-    foreground_templates = [
-        '{{ if gt .Code 0 }}red{{end}}',
-        '{{ if gt 0 .Code }}green{{end}}',
-        '{{ if eq .Code 0 }}blue{{end}}'
-    ]
-
-[[blocks]]
-    type = "rprompt"
-
-    [[blocks.segments]]
     type = 'text'
     style = 'plain'
-    template = '{{if ne .Code  0}}Code: {{ .Code }}{{end}}'
-[transient_prompt]
-    template = ' ➝ '
-    background = 'transparent'
-    foreground_templates = [
-        '{{ if gt .Code 0 }}red{{end}}',
-        '{{ if gt 0 .Code }}green{{end}}',
-        '{{ if eq .Code 0 }}darkGray{{end}}'
-    ]
+    foreground_templates = ['{{ if gt .Code 0 }}red{{end}}', '{{ if gt 0 .Code }}green{{end}}', '{{ if eq .Code 0 }}blue{{end}}']
 
-[palette]
-    text = '#282a36'
+[[blocks]]
+  type = 'rprompt'
+
+  [[blocks.segments]]
+    template = '{{if ne .Code  0}}Code: {{ .Code }}{{end}}'
+    type = 'text'
+    style = 'plain'
