Add wallpaper folder, update some niri configs

--- a/dms/settings.json
+++ b/dms/settings.json
@@ -148,7 +148,7 @@
   "mediaSize": 1,
   "appLauncherViewMode": "list",
   "spotlightModalViewMode": "grid",
-  "sortAppsAlphabetically": true,
+  "sortAppsAlphabetically": false,
   "appLauncherGridColumns": 5,
   "spotlightCloseNiriOverview": true,
   "niriOverviewOverlayEnabled": true,
@@ -304,17 +304,14 @@
   "osdPowerProfileEnabled": true,
   "osdAudioOutputEnabled": true,
   "powerActionConfirm": true,
-  "powerActionHoldDuration": 0.5,
+  "powerActionHoldDuration": 0.25,
   "powerMenuActions": [
     "reboot",
-    "logout",
     "poweroff",
-    "lock",
-    "suspend",
     "restart"
   ],
   "powerMenuDefaultAction": "poweroff",
-  "powerMenuGridLayout": true,
+  "powerMenuGridLayout": false,
   "customPowerActionLock": "",
   "customPowerActionLogout": "",
   "customPowerActionSuspend": "",
@@ -411,7 +408,7 @@
       "autoHide": false,
       "autoHideDelay": 250,
       "showOnWindowsOpen": false,
-      "openOnOverview": false,
+      "openOnOverview": true,
       "visible": true,
       "popupGapsAuto": true,
       "popupGapsManual": 4,
