Don't index firefox, dumbass

--- a/danksearch/config.toml
+++ b/danksearch/config.toml
@@ -88,6 +88,9 @@ max_depth = 0
     # IDE/Editor
     ".idea", ".vscode", ".java", ".android",
 
-    "Mod", ".stfolder"
+    "Mod", ".stfolder",
+
+    # DO NOT INDEX THE ENTIRE FIREFOX SOURCE CODE DUMBASS
+    "firefox", "BetterDiscord"
     ]
   extract_exif = true
